--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ crispy-tailwind==0.2.0
 Django==3.1.4
 django-crispy-forms==1.10.0
 django-environ==0.8.1
+gunicorn==20.1.0
 psycopg2-binary==2.9.3
 pytz==2020.4
 sqlparse==0.4.1
